# fastapi-jwt-auth

./: .env.example  README.md  main.py  pyproject.toml
app/: main.py
app/core/: auth.py  config.py
app/db/: schema.py
app/routers/: auth.py
